<resources>
    <string name="app_name">Fragments</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="fourth_fragment">Fourth Fragment</string>
    <string name="fifth_fragment">Fifth Fragment</string>
    <string name="trd_fragment">3rd Frag</string>
    <string name="f4th_fragment">4th Frag</string>
    <string name="f5th_fragment">5th Frag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_activity">Siguiente Activity</string>
    <string name="fragment_dialog">Fragment Dialog</string>
    <string name="dialogFragment">Dialog Fragment</string>
    <string name="dialogo_confirmar_borrado">¿Estás seguro que desea borrar los datos?</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="previous_fragment">Previous Fragment</string>
</resources>